add integrative metabolomics

--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,7 @@
 ---
 layout: page
 title: Contact
+categories: hidden
 ---
 	<p><b>Junyoung Park, Ph.D.</b><br />
 	Department of Chemical Engineering<br />
