--- a/index.html
+++ b/index.html
@@ -30,14 +30,15 @@ layout: landing
 
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
+						<a href="integrative_metabolomics">
 						<section class="spotlight">
-							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="images/pic01.png" alt="" /></div><div class="content">
 								<h2>Integrating<br />
 								metabolomics & fluxomics<br />
 								via thermodynamics</h2>
 								<p></p>
 							</div>
-						</section>
+						</section></a>
 						<section class="spotlight">
 							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
 								<h2>Understanding<br />
