--- a/biography.html
+++ b/biography.html
@@ -44,6 +44,7 @@ title: Biography
 		<p>
 		<h3>Leadership & Professional Experience</h3>
 		Cell Chemical Biology reviewer – <i>2017 - present</i><br>
+		Nature Communications reviewer – <i>2016 - present</i><br>
 		Metabolic Engineering reviewer – <i>2015 - present</i><br>
 		Physical Biology reviewer – <i>2015 - present</i><br>
 		Journal of Microbiology and Biotechnology reviewer – <i>2015 - present</i><br>
