--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@ layout: page
 title: Contact
 categories: hidden
 ---
-	<p><b>Junyoung Park, Ph.D.</b><br />
+	<p><b>Junyoung O. Park, Ph.D.</b><br />
 	Department of Chemical Engineering<br />
 	Massachusetts Institute of Technology<br />
 	77 Massachusetts Avenue<br />
