--- a/index.html
+++ b/index.html
@@ -30,28 +30,33 @@ layout: landing
 
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
-						<a href="integrative_metabolomics">
 						<section class="spotlight">
 							<div class="image"><img src="images/pic01.png" alt="" /></div><div class="content">
+							<a href="integrative_metabolomics">
 								<h2>Integrating<br />
 								metabolomics & fluxomics<br />
 								via thermodynamics</h2>
 								<p></p>
-							</div>
-						</section></a>
-						<section class="spotlight">
-							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
-								<h2>Understanding<br />
-								human diseases</h2>
-								<p></p>
+							</a>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="images/pic02.png" alt="" /></div><div class="content">
+							<a href="human_diseases">
+								<h2>Understanding<br />
+								human diseases</h2>
+								<p></p>
+							</a>
+							</div>
+						</section>
+						<section class="spotlight">
+							<div class="image"><img src="images/pic03.png" alt="" /></div><div class="content">
+							<a href="co2_fixation">
 								<h2>Enhancing<br />
-								CO<sub>2</sub>fixation</h2>
+								CO<sub>2</sub> utilization</h2>
 								<p></p>
 							</div>
+							</a>
 						</section>
 					</section>
 
