--- a/teaching.html
+++ b/teaching.html
@@ -8,6 +8,9 @@ title: Teaching
 	<hr />
 	<p>
 	<h3>Teaching Experience</h3>
+	Department of Chemical Engineering, MIT – <i>2017</i>
+	<li>Downstream Processing</li>
+	<br>
 	Department of Chemical and Biological Engineering, Princeton University – <i>2012 - 2015</i>
 	<li>Separations in Chemical Engineering and Biotechnology</li>
 	<li>Chemical Engineering Laboratory</li>
