--- a/biography.html
+++ b/biography.html
@@ -3,22 +3,110 @@ layout: page
 title: Biography
 ---
 	<section>
+		<h2>Junyoung O. Park</h2>
+		
+		<p>
 		<h3>Education</h3>
 		<a href="https://www.princeton.edu">Princeton University</a>, Princeton, NJ – <i>2010 - 2016</i>
 		<li>Doctor of Philosophy in <i>Chemical and Biological Engineering</i> – <i>2016</i></li>
 		<li>Master of Arts in <i>Chemical and Biological Engineering</i> – <i>2012</i></li>
 		<br>
-		<a href="https://www.ucsd.edu">University of California, San Diego (UCSD)</a>, La Jolla, CA – <i>cum laude 2007 - 2010</i>
+		<a href="https://www.ucsd.edu">University of California, San Diego (UCSD)</a>, La Jolla, CA – <i>2007 - 2010</i>
 		<li>Bachelor of Science in <i>Bioengineering: Biotechnology</i></li>
 		<li>Bachelor of Arts in <i>Mathematics</i></li>
-		<hr />
-		<p>
-		<h3>Current Position</h3>
-		<a href="http://web.mit.edu">Massachusetts Institute of Technology</a>, Cambridge, MA – <i>2016 - present</i><br>
-		Postdoc, Department of Chemical Engineering
 		</p>
-		<hr />
+		
 		<p>
+		<h3>Employment</h3>
+		<a href="http://www.ucla.edu/">University of California, Los Angeles (UCLA)</a>, Los Angeles, CA – <i>2018 - present</i><br>
+		<li>Assistant Professor, Department of Chemical and Biomolecular Engineering</li>
+		<br>
+		<a href="http://web.mit.edu">Massachusetts Institute of Technology</a>, Cambridge, MA – <i>2016 - 2018</i><br>
+		<li>Postdoc, Department of Chemical Engineering</li>
+		</p>
+		
+		<hr />
+		<h3>Training</h3>
+		Bioinformatics and Metabolic Engineering Laboratory, MIT – <i>2016 - 2018</i><br />
+		Adviser: Prof. Gregory Stephanopoulos
+		<ul>
+		<li>Developed a <sup>13</sup>C-<sup>18</sup>O-based metabolic flux and free energy analysis framework for various cell types including bacteria and cancer cells.</li>
+		<li>Applied the metabolic flux and free energy analysis to maximize conversion of CO<sub>2</sub> into oil using <i>Moorella thermoacetica</i> and <i>Yarrowia lipolytica</i>.</li>
+		<li>Characterized renal cell carcinoma metabolism under combinatorial therapeutics.</li>
+		</ul>
+		Lewis-Sigler Institute for Integrative Genomics, Princeton – <i>2010 - 2016</i><br />
+		Adviser: Prof. Joshua D. Rabinowitz
+		<ul>
+		<li>Developed a flux-based method and software to measure Gibbs free energy of metabolic reactions.</li>
+		<li>Developed an integrative framework combining metabolite concentrations, fluxes, and thermodynamics for more precise and comprehensive characterization of metabolism.</li>
+		<li>Applied the integrated approach to several biological systems including <i>E. coli</i>, yeast, <i>Clostridium</i> species, hepatocytes, renal epithelial cells, and <i>in vivo</i> mouse models to elucidate fundamental metabolic regulation, to achieve effective biofuel production, and to better understand diabetes and cancer.</li>
+		<li>Contributed to a successful Department of Energy grant proposal.</li>
+		</ul>
+		Bio-inspired Materials and Stem Cell Engineering Laboratory, Bioengineering, UCSD – <i>2009 - 2010</i><br />
+		Adviser: Prof. Shyni Varghese
+		<ul>
+		<li>Designed and developed a small diameter hydrogel-based vascular graft that is highly biocompatible, reduces significantly the risk of thrombosis, and increases the patency once placed within patients.</li>
+		<li>Conducted various mechanical testing and reached the final design of poly(ethylene glycol) diacrylate (PEGDA)-clay nanocomposite hydrogel, which showed robust mechanical properties that can be controlled by varying clay concentrations.</li>
+		</ul>
+		Molecular Systems and Gene Regulation Group, Nanoengineering, UCSD – <i>2008 - 2010</i><br />
+		Adviser: Prof. Gaurav Arya
+		<ul>
+		<li>Built a computer model to simulate random walks of transcription factors in the presence of various conformations of compact chromatin fibers using C++.</li>
+		<li>Performed kinetic Monte Carlo simulation, which revealed different modes of diffusion that transcription factors undergo: 3D-diffusion, when they are far away from DNA/chromatin fiber and 1D-diffusion along the DNA, otherwise.</li>
+		</ul>
+		Systems Biology Research Group, Bioengineering, UCSD – <i>2008 - 2009</i><br />
+		Adviser: Prof. Bernhard Ø. Palsson
+		<ul>
+		<li>Developed <a href="http://bigg1.ucsd.edu/">the Biochemical, Genetic and Genomic (BiGG) knowledgebase</a>, which provides the first collection of curated, high quality metabolic reconstructions.</li>
+		<li>Integrated metabolic flux constraints as well as objective functions required for mathematical optimization to various organisms’ genome-scale metabolic reconstruction models.</li>
+		<li>Rendered respective organisms’ metabolic networks in Scalable Vector Graphics (SVG) that can be interactively displayed in web browsers using Perl and SQL.</li>
+		</ul>
+		
+		<hr />
+		<h3>Teaching</h3>
+		Department of Chemical Engineering, MIT – <i>2017</i>
+		<li>Downstream Processing</li>
+		<br>
+		Department of Chemical and Biological Engineering, Princeton University – <i>2012 - 2015</i>
+		<li>Separations in Chemical Engineering and Biotechnology</li>
+		<li>Chemical Engineering Laboratory</li>
+		<li>Ethics and Technology: Engineering in the Real World</li>
+		<br>
+		Seoul Language Institute, South Korea – <i>2010</i>
+		<li>Chemistry, English, and Mathematics Instructor</li>
+		<br>
+		Department of Physics, UCSD – <i>2008</i>
+		<li>Reader</li>
+		
+		<hr />
+		<h3>Presentations</h3>
+		<p>
+		<ul class="ul1">
+		<li>Integration of metabolomics and fluxomics via thermodynamics. <i>Pfizer in Cambridge 2018</i></li>
+		<li>Systems-level engineering of metabolic networks. <i>UCLA 2018</i></li>
+		<li>Efficient energy utilization in carbon-fixing <i>Moorella thermoacetica</i>. <i>AIChE Annual Meeting in Minneapolis 2017</i></li>
+		<li>Park, J. O., Wei, M. H., Tanner, L. B., Amador-Noguez, D., Li, S. H., Rabinowitz, J. D.  Glycolysis balances enzyme efficiency and metabolic adaptivity. <i>Department of Energy Genomic Sciences Program Annual PI Meeting 2017</i></li>
+		<li>Dash, S., Khodayari, A., Zhou, J., Holwerda, E. K., Olson, D. G., Park, J. O., Emerson, D., Woolston, B., Chen, P., Liao, J. C., Stephanopoulos, G., Lynd, L. R., Maranas, C. D. Ensemble cell-wide kinetic modeling of anaerobic organisms to support fuels and chemicals production. <i>Department of Energy Genomic Sciences Program Annual PI Meeting 2017</i></li>
+		<li>Towards integrative metabolomics in biotechnology and medicine. <i>Y-IBS symposium at Harvard 2016</i></li>
+		<li>Park, J. O., Amador-Noguez, D., Wei, M. H., Rabinowitz, J. D.  Limited forward thermodynamic driving force in glycolysis of slow-growing bacteria. <i>Department of Energy Genomic Science Contractor-Grantee Meeting XIV 2016</i></li>
+		<li>Metabolite concentrations and ΔG that favor efficient enzyme usage are a conserved feature of cellular metabolism. <i>MIT 2015</i></li>
+		<li>Park, J. O., Rubin, S. A., Xu, Y. F., Amador-Noguez, D., Fan, J., Rabinowitz, J. D.  Conservation of absolute cellular metabolite concentrations. <i>Department of Energy Genomic Science Contractors-Grantees Meeting XIII 2015</i></li>
+		<li>Park, J. O., Rubin, S. A., Xu, Y. F., Amador-Noguez, D., Fan, J., Rabinowitz, J. D.  Comprehensive quantitation of metabolite concentrations, gross reaction fluxes, and reaction free energies across cells from four organisms. <i>Metabolism, Diet and Disease 2014</i></li>
+		<li>Amador-Noguez, D., Park, J. O., Zhang, Z., Rubin, S. A., Xu, W., Rabinowitz, J. D.  A fully reversible, highly energy efficient glycolysis with unique cofactor utilization in C. cellulolyticum. <i>Department of Energy Genomic Science Contractor-Grantee Meeting XII 2014</i></li>
+		<li>Xu, Y. F., Doucette, C. D., Park, J. O., Roquet, N., Amador-Noguez, D., Reaves, M. L., Feng, X. J., Rabitz, H., Schwab, D. J., Wingreen, N. S., Rabinowitz, J. D.  Integration of carbon, nitrogen, and oxygen metabolism in Escherichia coli. <i>Department of Energy Genomic Science Awardee Meeting X 2012</i></li>
+		<li>Park, J. O., Xu, Y. F., Rabinowitz, J. D.  Integration of carbon, nitrogen, and oxygen metabolism in Escherichia coli. <i>International Conference and Exhibition on Metabolomics & Systems Biology 2012</i></li>
+		<li>Park, J. O., Arya G.  Facilitated Diffusion of Transcription Factors in Search of DNA Target Sites. <i>Calit2 Summer Scholars Poster Session at UCSD 2009</i></li>
+		<li>Park, J. O., Schellenberger J., Conrad, T. M., Palsson, B. Ø.  BiGG: Biochemical, Genetic and Genomic Database. <i>Calit2 Summer Scholars Poster Session at UCSD 2008</i></li>
+		<li>Metabolic Engineering Guest Lecture, <i>CBE 447 04/2015</i></li>
+		<li>Princeton Chemical Biology Meeting <i>04/2015, 06/2013</i></li>
+		<li>Princeton E-ffiliates Partnership Retreat <i>02/2015</i></li>
+		<li>Princeton Prokaryotes Meeting <i>03/2016, 11/2015, 10/2014, 05/2014, 10/2013, 11/2012</i></li>
+		<li>Princeton BioEngineering Colloquium <i>03/2014</i></li>
+		<li>Graduate Student Symposium <i>10/2013, 10/2012</i></li>
+		</ul>
+		</p>
+
+<!--		<p>
 		<h3>Skills</h3>
 		<b>Excellent interpersonal, project management and leadership skills</b><br>
 		<b>Analytical chemistry</b>: Mass spectrometry, High-performance liquid chromatography, LC/MS, GC/MS, Nuclear magnetic resonance spectroscopy<br>
@@ -64,7 +152,7 @@ title: Biography
 		</p>
 		<hr />
 	</section>
-<!-- 	<section>
+ 	<section>
 		<h4>Image</h4>
 		<h5>Fit</h5>
 		<div class="box alt">
