--- a/contact.html
+++ b/contact.html
@@ -12,5 +12,6 @@ categories: hidden
 	Phone: (617) 258-0349<br />
 	Fax: (617) 253-3122<br />
 	Email: jopark@mit.edu<br />
+	Email: jop@ucla.edu<br />
 	</p>
 	<hr />
