--- a/human_diseases.html
+++ b/human_diseases.html
@@ -10,6 +10,7 @@ categories: hidden
 	<p>
 	<h3>References</h3>
 	<ul class="ul1">
+	<li>Miller, R. A., Shi, Y., Lu, W., Pirman, D. A., Jatkar, A., Blatnik, M., Wu, H., Cardenas, C., Wan, M., Foskett, J. K., Park, J. O., Zhang, Y., Holland, W. L., Rabinowitz, J. D., Birnbaum, M. J.  <a href="https://www.nature.com/articles/nm.4514">Targeting hepatic glutaminase activity to ameliorate hyperglycemia.</a> <i>Nature Medicine</i> (2018) doi:10.1038/nm.4514</li>
 	<li>Song, Y., Marmion, R. A., Park, J. O., Biswas, D., Rabinowitz, J. D., Shvartsman, S. Y.  <a href="http://www.cell.com/developmental-cell/fulltext/S1534-5807(17)30501-4">Dynamic control of dNTP synthesis in early embryos.</a> <i>Developmental Cell</i> 42,1-8 (2017) doi: 10.1016/j.devcel.2017.06.013</li>
 	<li>Liu, L., Chen, L., Ducker, G., Park, J. O., Shah, S., Wellen, K. E., Rabinowitz, J. D.  <a href="http://cancerres.aacrjournals.org/content/76/14_Supplement/1013.short">Quantification of NADPH balance in cancer.</a> <i>Cancer Research</i> 76(14 Suppl):1013 (2016) doi: 10.1158/1538-7445.AM2016-1013</li>
 	<li>Liu, L., Shah, S., Fan, J., Park, J. O., Wellen, K. E., Rabinowitz, J. D.  <a href="https://www.nature.com/nchembio/journal/v12/n5/abs/nchembio.2047.html">Malic enzyme tracers reveal hypoxia-induced switch in adipocyte NADPH pathway usage.</a> <i>Nature Chemical Biology</i> 12:345-352 (2016) doi: 10.1038/nchembio.2047</li>
