--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ layout: landing
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="images/pic01.png" alt="" /></div><div class="content">
+							<div class="image"><img src="/images/pic01.png" alt="" /></div><div class="content">
 							<a href="integrative_metabolomics">
 								<h2>Integrating<br />
 								metabolomics & fluxomics<br />
@@ -41,7 +41,7 @@ layout: landing
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic02.png" alt="" /></div><div class="content">
+							<div class="image"><img src="/images/pic02.png" alt="" /></div><div class="content">
 							<a href="human_diseases">
 								<h2>Understanding<br />
 								human diseases</h2>
@@ -50,7 +50,7 @@ layout: landing
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic03.png" alt="" /></div><div class="content">
+							<div class="image"><img src="/images/pic03.png" alt="" /></div><div class="content">
 							<a href="co2_fixation">
 								<h2>Enhancing<br />
 								CO<sub>2</sub> utilization</h2>
