onclick events; minor corrections

--- a/members.html
+++ b/members.html
@@ -18,7 +18,7 @@ title: Members
 		<div class="card">
 			<img src="/images/ppl/yg.jpg" alt="Yogesh" style="width:100%">
 			<div class="container">
-			<h4 align="center"><a href="https://systomicbiology.wordpress.com/">Yogesh Goyal</a></h4>
+			<h4 align="center"><a href="https://systomicbiology.wordpress.com/" onclick="trackOutboundLink('https://systomicbiology.wordpress.com/'); return false;">Yogesh Goyal</a></h4>
 			<p class="title">Visiting Scientist</p>
 			<p style="text-align:right;">yogesh.goyal0308 at_gmail.com</p>
 			</div>
