--- a/contact.html
+++ b/contact.html
@@ -4,14 +4,13 @@ title: Contact
 categories: hidden
 ---
 	<p><b>Junyoung O. Park, Ph.D.</b><br />
-	Department of Chemical Engineering<br />
-	Massachusetts Institute of Technology<br />
-	77 Massachusetts Avenue<br />
-	56-439<br />
-	Cambridge, MA 02139<br /><br />
+	Department of Chemical and Biomolecular Engineering<br />
+	UCLA<br />
+	Boelter Hall, 5531<br />
+	420 Westwood Plaza<br />
+	Los Angeles, CA 90095<br /><br />
 	Phone: (617) 258-0349<br />
 	Fax: (617) 253-3122<br />
-	Email: jopark@mit.edu<br />
 	Email: jop@ucla.edu<br />
 	</p>
 	<hr />
