--- a/co2_fixation.html
+++ b/co2_fixation.html
@@ -10,7 +10,6 @@ categories: hidden
 	<p>
 	<h3>References</h3>
 	<ul class="ul1">
-	<li>Park, J. O., Liu, N., Holinski, K. M., Emerson, D. F., Woolston, B. M., Vidoudez, C., Islam, M. A., Girguis, P. R., Stephanopoulos, G.  <a href="#">Enhancing CO<sub>2</sub> fixation by balancing reducing power and ATP.</a> <i>in preparation</i></li>
-	<li>Aristilde, L., Lewis, I. A., Park, J. O., Rabinowitz, J. D.  <a href="http://aem.asm.org/content/81/4/1452.short">Hierarchy in pentose sugar metabolism in Clostridium Acetobutylicum.</a> <i>Applied and Environmental Microbiology</i> 81:1452-1462 (2015) doi: 10.1128/AEM.03199-14</li>
+	<li>Aristilde, L., Lewis, I. A., Park, J. O., Rabinowitz, J. D.  <a href="http://aem.asm.org/content/81/4/1452.short" onclick="trackOutboundLink('http://aem.asm.org/content/81/4/1452.short'); return false;">Hierarchy in pentose sugar metabolism in <i>Clostridium acetobutylicum</i>.</a> <i>Applied and Environmental Microbiology</i> 81:1452-1462 (2015) doi: 10.1128/AEM.03199-14</li>
 	</ul>
 	</p>
