--- a/integrative_metabolomics.html
+++ b/integrative_metabolomics.html
@@ -11,8 +11,7 @@ categories: hidden
 	<p>
 	<h3>References</h3>
 	<ul class="ul1">
-	<li>Park, J. O., Rubin, S. A., Xu, Y. F., Amador-Noguez, D., Fan, J., Shlomi, T., Rabinowitz, J. D.  <a href="https://www.nature.com/nchembio/journal/v12/n7/abs/nchembio.2077.html">Metabolite concentrations, fluxes and free energies imply efficient enzyme usage.</a> <i>Nature Chemical Biology</i> 12:482-489 (2016) doi: 10.1038/nchembio.2077</li>
-	<li>Park, J. O., Rubin, S. A., Xu, Y. F., Amador-Noguez, D., Fan, J., Rabinowitz, J. D.  <a href="https://cancerandmetabolism.biomedcentral.com/articles/10.1186/2049-3002-2-S1-P54">Comprehensive quantitation of metabolite concentrations, gross reaction fluxes, and reaction free energies across cells from four organisms.</a> <i>Cancer & Metabolism</i> 2(Suppl 1):P54 (2014) doi: 10.1186/2049-3002-2-S1-P54</li>
-	<li>Schellenberger, J., Park, J. O., Conrad, T. M., Palsson, B. Ø.  <a href="https://bmcbioinformatics.biomedcentral.com/articles/10.1186/1471-2105-11-213">BiGG: A Biochemical Genetic and Genomic knowledgebase of large scale metabolic reconstructions.</a> <i>BMC Bioinformatics</i> 11:213 (2010) doi: 10.1186/1471-2105-11-213</li>
+	<li>Park, J. O., Rubin, S. A., Xu, Y. F., Amador-Noguez, D., Fan, J., Shlomi, T., Rabinowitz, J. D.  <a href="https://www.nature.com/nchembio/journal/v12/n7/abs/nchembio.2077.html" onclick="trackOutboundLink('https://www.nature.com/nchembio/journal/v12/n7/abs/nchembio.2077.html'); return false;">Metabolite concentrations, fluxes and free energies imply efficient enzyme usage.</a> <i>Nature Chemical Biology</i> 12:482-489 (2016) doi: 10.1038/nchembio.2077</li>
+	<li>Schellenberger, J., Park, J. O., Conrad, T. M., Palsson, B. Ø.  <a href="https://bmcbioinformatics.biomedcentral.com/articles/10.1186/1471-2105-11-213" onclick="trackOutboundLink('https://bmcbioinformatics.biomedcentral.com/articles/10.1186/1471-2105-11-213'); return false;">BiGG: A Biochemical Genetic and Genomic knowledgebase of large scale metabolic reconstructions.</a> <i>BMC Bioinformatics</i> 11:213 (2010) doi: 10.1186/1471-2105-11-213</li>
 	</ul>
 	</p>
