minor info update

--- a/contact.html
+++ b/contact.html
@@ -13,4 +13,11 @@ categories: hidden
 	Fax: (310) 206-4107<br />
 	Email: jop@ucla.edu<br />
 	</p>
+	<p><b>Park Lab</b><br />
+	Department of Chemical and Biomolecular Engineering<br />
+	UCLA<br />
+	Boelter Hall, 7535<br />
+	420 Westwood Plaza<br />
+	Los Angeles, CA 90095<br /><br />
+	</p>
 	<hr />
