update member and teaching

--- a/biography.html
+++ b/biography.html
@@ -64,6 +64,9 @@ title: Biography
 		
 		<hr />
 		<h3>Teaching</h3>
+		Department of Chemical and Biomolecular Engineering, UCLA – <i>2018 - present</i>
+		<li>Thermodynamics</li>
+		<br>
 		Department of Chemical Engineering, MIT – <i>2017</i>
 		<li>Downstream Processing</li>
 		<br>
