--- a/members.html
+++ b/members.html
@@ -16,6 +16,16 @@ title: Members
 	</div>
 	<div class="col-xs-6 col-md-4">
 		<div class="card">
+			<img src="/images/ppl/jx.jpg" alt="Jimmy" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Jimmy Xu</a></h4>
+			<p class="title">Graduate Student</p>
+			<p style="text-align:right;">jxu11 at_g.ucla.edu</p>
+			</div>
+		</div>
+	</div>
+	<div class="col-xs-6 col-md-4">
+		<div class="card">
 			<img src="/images/ppl/yg.jpg" alt="Yogesh" style="width:100%">
 			<div class="container">
 			<h4 align="center"><a href="https://systomicbiology.wordpress.com/" onclick="trackOutboundLink('https://systomicbiology.wordpress.com/'); return false;">Yogesh Goyal</a></h4>
