--- a/biography.html
+++ b/biography.html
@@ -85,6 +85,11 @@ title: Biography
 		<h3>Presentations</h3>
 		<p>
 		<ul class="ul1">
+		<li>Integrating kinetics, thermodynamics, and metabolomics. <i>Korea Institute for Advanced Study (KIAS) in Seoul, South Korea, 4/30/2019</i></li>
+		<li>Integration of metabolomics and fluxomics via thermodynamics. <i>VIB Metabolomics Data Interpretation in Leuven, Belgium, 3/11/2019</i></li>
+		<li>Integrative-omics in biotechnology. <i>ISPE Biopharmaceutical Manufacturing Conference in Huntington Beach, 12/11/2018</i></li>
+		<li>Glycolysis balances enzyme efficiency, energy efficiency, and metabolic adaptivity. <i>UCLA Metabolism Interest Group, 12/7/2018</i></li>
+		<li>Systems-level engineering of metabolic networks. <i>UCLA QCBio Retreat at Calamigos Ranch, Malibu, 9/25/2018</i></li>
 		<li>Integration of metabolomics and fluxomics via thermodynamics. <i>Pfizer in Cambridge 2018</i></li>
 		<li>Systems-level engineering of metabolic networks. <i>UCLA 2018</i></li>
 		<li>Efficient energy utilization in carbon-fixing <i>Moorella thermoacetica</i>. <i>AIChE Annual Meeting in Minneapolis 2017</i></li>
@@ -121,7 +126,8 @@ title: Biography
 		<hr />
 		<p>
 		<h3>Honors</h3>
-		Schowalter Travel Fund – <i>2012, 2014, 2015</i><br>
+		Professor of the Year (AIChE at UCLA) – <i>2019</i><br>
+		Schowalter Travel Fund – <i>2012 - 2015</i><br>
 		USC Provost’s PhD Fellowship (declined) – <i>2010</i><br>
 		Hughes Scholars Program at UCSD – <i>2009 - 2010</i><br>
 		Warren College Honors Student – <i>2008 - 2010</i><br>
