add lab members

--- a/contact.html
+++ b/contact.html
@@ -19,5 +19,8 @@ categories: hidden
 	Boelter Hall, 7535<br />
 	420 Westwood Plaza<br />
 	Los Angeles, CA 90095<br /><br />
+	Office: (310) 206-1642<br />
+	Lab: (310) 206-9171<br />
+	Email: parklab@ucla.edu<br />
 	</p>
 	<hr />
