--- a/members.html
+++ b/members.html
@@ -26,11 +26,60 @@ title: Members
 	</div>
 	<div class="col-xs-6 col-md-4">
 		<div class="card">
-			<img src="/images/ppl/yg.jpg" alt="Yogesh" style="width:100%">
+			<img src="/images/ppl/bc.jpg" alt="Bill" style="width:100%">
 			<div class="container">
-			<h4 align="center"><a href="https://systomicbiology.wordpress.com/" onclick="trackOutboundLink('https://systomicbiology.wordpress.com/'); return false;">Yogesh Goyal</a></h4>
-			<p class="title">Visiting Scientist</p>
-			<p style="text-align:right;">yogesh.goyal0308 at_gmail.com</p>
+			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Bill Chuang</a></h4>
+			<p class="title">Undergrad Student</p>
+			<p style="text-align:right;">bill.chuang0624 at_ucla.edu</p>
+			</div>
+		</div>
+	</div>
+	<div class="col-xs-6 col-md-4">
+		<div class="card">
+			<img src="/images/ppl/cg.jpg" alt="Cole" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Cole Gilbertson</a></h4>
+			<p class="title">Undergrad Student</p>
+			<p style="text-align:right;">colegilbertson1998 at_yahoo.com</p>
+			</div>
+		</div>
+	</div>
+	<div class="col-xs-6 col-md-4">
+		<div class="card">
+			<img src="/images/ppl/kg.jpg" alt="Kanika" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Kanika Gulia</a></h4>
+			<p class="title">Undergrad Student</p>
+			<p style="text-align:right;">kgulia at_ucla.edu</p>
+			</div>
+		</div>
+	</div>
+	<div class="col-xs-6 col-md-4">
+		<div class="card">
+			<img src="/images/ppl/em.jpg" alt="Edward" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Edward Ma</a></h4>
+			<p class="title">Undergrad Student</p>
+			<p style="text-align:right;">edwardmalux at_gmail.com</p>
+			</div>
+		</div>
+	</div>
+	<div class="col-xs-6 col-md-4">
+		<div class="card">
+			<img src="/images/ppl/km.jpg" alt="Kayli" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Kayli Masuda</a></h4>
+			<p class="title">Undergrad Student</p>
+			<p style="text-align:right;">kaylimasuda at_yahoo.com</p>
+			</div>
+		</div>
+	</div>
+	<div class="col-xs-6 col-md-4">
+		<div class="card">
+			<img src="/images/ppl/mc.jpg" alt="Marie" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="contact">Join Us!</a></h4>
+			<p class="title">Contact us via e-mail or phone</p>
 			</div>
 		</div>
 	</div>
@@ -79,4 +128,14 @@ title: Members
 	</div>
 </div>
 </div>
+	<div class="col-xs-6 col-md-4">
+		<div class="card">
+			<img src="/images/ppl/yg.jpg" alt="Yogesh" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="https://systomicbiology.wordpress.com/" onclick="trackOutboundLink('https://systomicbiology.wordpress.com/'); return false;">Yogesh Goyal</a></h4>
+			<p class="title">Visiting Scientist</p>
+			<p style="text-align:right;">yogesh.goyal0308 at_gmail.com</p>
+			</div>
+		</div>
+	</div>
 -->
