update publications and members

--- a/members.html
+++ b/members.html
@@ -16,6 +16,26 @@ title: Members
 	</div>
 	<div class="col-xs-6 col-md-4">
 		<div class="card">
+			<img src="/images/ppl/al.jpg" alt="Aliya" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Aliya Lakhani</a></h4>
+			<p class="title">Graduate Student</p>
+			<p style="text-align:right;">aliyalakhani at_g.ucla.edu</p>
+			</div>
+		</div>
+	</div>
+	<div class="col-xs-6 col-md-4">
+		<div class="card">
+			<img src="/images/ppl/kp.png" alt="Keunseok" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Keunseok Park</a></h4>
+			<p class="title">Graduate Student</p>
+			<p style="text-align:right;">kencab at_g.ucla.edu</p>
+			</div>
+		</div>
+	</div>
+	<div class="col-xs-6 col-md-4">
+		<div class="card">
 			<img src="/images/ppl/jx.jpg" alt="Jimmy" style="width:100%">
 			<div class="container">
 			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Jimmy Xu</a></h4>
@@ -31,6 +51,26 @@ title: Members
 			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Bill Chuang</a></h4>
 			<p class="title">Undergrad Student</p>
 			<p style="text-align:right;">bill.chuang0624 at_ucla.edu</p>
+			</div>
+		</div>
+	</div>
+	<div class="col-xs-6 col-md-4">
+		<div class="card">
+			<img src="/images/ppl/ed.png" alt="Emily" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Emily Dong</a></h4>
+			<p class="title">Undergrad Student</p>
+			<p style="text-align:right;">emilydong001 at_gmail.com</p>
+			</div>
+		</div>
+	</div>
+	<div class="col-xs-6 col-md-4">
+		<div class="card">
+			<img src="/images/ppl/fg.jpg" alt="Kiko" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Francisco Galang</a></h4>
+			<p class="title">Undergrad Student</p>
+			<p style="text-align:right;">kixstrla1 at_g.ucla.edu</p>
 			</div>
 		</div>
 	</div>
@@ -71,24 +111,6 @@ title: Members
 			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Kayli Masuda</a></h4>
 			<p class="title">Undergrad Student</p>
 			<p style="text-align:right;">kaylimasuda at_yahoo.com</p>
-			</div>
-		</div>
-	</div>
-	<div class="col-xs-6 col-md-4">
-		<div class="card">
-			<img src="/images/ppl/mc.jpg" alt="Marie" style="width:100%">
-			<div class="container">
-			<h4 align="center"><a href="contact">Join Us!</a></h4>
-			<p class="title">Contact us via e-mail or phone</p>
-			</div>
-		</div>
-	</div>
-	<div class="col-xs-6 col-md-4">
-		<div class="card">
-			<img src="/images/ppl/ae.jpg" alt="Albert" style="width:100%">
-			<div class="container">
-			<h4 align="center"><a href="contact">Join Us!</a></h4>
-			<p class="title">Contact us via e-mail or phone</p>
 			</div>
 		</div>
 	</div>
@@ -135,6 +157,24 @@ title: Members
 			<h4 align="center"><a href="https://systomicbiology.wordpress.com/" onclick="trackOutboundLink('https://systomicbiology.wordpress.com/'); return false;">Yogesh Goyal</a></h4>
 			<p class="title">Visiting Scientist</p>
 			<p style="text-align:right;">yogesh.goyal0308 at_gmail.com</p>
+			</div>
+		</div>
+	</div>
+	<div class="col-xs-6 col-md-4">
+		<div class="card">
+			<img src="/images/ppl/mc.jpg" alt="Marie" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="contact">Join Us!</a></h4>
+			<p class="title">Contact us via e-mail or phone</p>
+			</div>
+		</div>
+	</div>
+	<div class="col-xs-6 col-md-4">
+		<div class="card">
+			<img src="/images/ppl/ae.jpg" alt="Albert" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="contact">Join Us!</a></h4>
+			<p class="title">Contact us via e-mail or phone</p>
 			</div>
 		</div>
 	</div>
