add members; update bio and pub

--- a/biography.html
+++ b/biography.html
@@ -20,6 +20,7 @@ title: Biography
 		<h3>Employment</h3>
 		<a href="http://www.ucla.edu/">University of California, Los Angeles (UCLA)</a>, Los Angeles, CA – <i>2018 - present</i><br>
 		<li>Assistant Professor, Department of Chemical and Biomolecular Engineering</li>
+		<li>Co-Director, Metabolomics Center</li>
 		<br>
 		<a href="http://web.mit.edu">Massachusetts Institute of Technology</a>, Cambridge, MA – <i>2016 - 2018</i><br>
 		<li>Postdoc, Department of Chemical Engineering</li>
