--- a/members.html
+++ b/members.html
@@ -8,9 +8,19 @@ title: Members
 		<div class="card">
 			<img src="/images/ppl/jop.jpg" alt="Jun" style="width:100%">
 			<div class="container">
-			<h4 align="center"><a href="biography">Junyoung O. Park</a></h4>
+			<h4 align="center"><a href="biography">Jun Park</a></h4>
 			<p class="title">Principal Investigator</p>
 			<p style="text-align:right;">jop at_ucla.edu</p>
+			</div>
+		</div>
+	</div>
+	<div class="col-xs-6 col-md-4">
+		<div class="card">
+			<img src="/images/ppl/ta.jpg" alt="Tina" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Thikrayat Al-Attar</a></h4>
+			<p class="title">Postdoctoral Scholar</p>
+			<p style="text-align:right;">tinaattar at_g.ucla.edu</p>
 			</div>
 		</div>
 	</div>
@@ -111,6 +121,26 @@ title: Members
 			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Kayli Masuda</a></h4>
 			<p class="title">Undergrad Student</p>
 			<p style="text-align:right;">kaylimasuda at_yahoo.com</p>
+			</div>
+		</div>
+	</div>
+	<div class="col-xs-6 col-md-4">
+		<div class="card">
+			<img src="/images/ppl/mm.jpg" alt="Megan" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Megan McShane</a></h4>
+			<p class="title">Undergrad Student</p>
+			<p style="text-align:right;">mbmcshane at_ucla.edu</p>
+			</div>
+		</div>
+	</div>
+	<div class="col-xs-6 col-md-4">
+		<div class="card">
+			<img src="/images/ppl/jr.jpg" alt="Justine" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Justine Reblando</a></h4>
+			<p class="title">Undergrad Student</p>
+			<p style="text-align:right;">tinntine2 at_ucla.edu</p>
 			</div>
 		</div>
 	</div>
