--- a/members.html
+++ b/members.html
@@ -66,7 +66,7 @@ title: Members
 	</div>
 	<div class="col-xs-6 col-md-4">
 		<div class="card">
-			<img src="/images/ppl/ed.png" alt="Emily" style="width:100%">
+			<img src="/images/ppl/ed.jpg" alt="Emily" style="width:100%">
 			<div class="container">
 			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Emily Dong</a></h4>
 			<p class="title">Undergrad Student</p>
@@ -141,6 +141,16 @@ title: Members
 			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Justine Reblando</a></h4>
 			<p class="title">Undergrad Student</p>
 			<p style="text-align:right;">tinntine2 at_ucla.edu</p>
+			</div>
+		</div>
+	</div>
+	<div class="col-xs-6 col-md-4">
+		<div class="card">
+			<img src="/images/ppl/hw.jpg" alt="Hans" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Hans Wahono</a></h4>
+			<p class="title">Undergrad Student</p>
+			<p style="text-align:right;">hanssw at_g.ucla.edu</p>
 			</div>
 		</div>
 	</div>
