--- a/members.html
+++ b/members.html
@@ -46,6 +46,16 @@ title: Members
 	</div>
 	<div class="col-xs-6 col-md-4">
 		<div class="card">
+			<img src="/images/ppl/se.jpg" alt="Sevcan" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Sevcan Erşan</a></h4>
+			<p class="title">Postdoctoral Researcher</p>
+			<p style="text-align:right;">sevcanersan at_gmail.com</p>
+			</div>
+		</div>
+	</div>
+	<div class="col-xs-6 col-md-4">
+		<div class="card">
 			<img src="/images/ppl/bc.jpg" alt="Bill" style="width:100%">
 			<div class="container">
 			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Bill Chuang</a></h4>
