--- a/members.html
+++ b/members.html
@@ -106,6 +106,16 @@ title: Members
 	</div>
 	<div class="col-xs-6 col-md-4">
 		<div class="card">
+			<img src="/images/ppl/sl.jpg" alt="SungGyung" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Sung Gyung Lee</a></h4>
+			<p class="title">Undergrad Student</p>
+			<p style="text-align:right;">sunggyung.lee123 at_gmail.com</p>
+			</div>
+		</div>
+	</div>
+	<div class="col-xs-6 col-md-4">
+		<div class="card">
 			<img src="/images/ppl/em.jpg" alt="Edward" style="width:100%">
 			<div class="container">
 			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Edward Ma</a></h4>
