--- a/biography.html
+++ b/biography.html
@@ -68,8 +68,9 @@ title: Biography
 		<hr />
 		<h3>Teaching</h3>
 		Department of Chemical and Biomolecular Engineering, UCLA – <i>2018 - present</i>
-		<li>Molecular Biotechnology for Engineers</li>
-		<li>Thermodynamics</li>
+		<li>Molecular Biotechnology for Engineers (CBE/BE CM145/CM245)</li>
+		<li>Molecular Biotechnology: From Gene to Product (CBE 104D)</li>
+		<li>Thermodynamics (CBE 200 and CBE 102A)</li>
 		<br>
 		Department of Chemical Engineering, MIT – <i>2017</i>
 		<li>Downstream Processing</li>
@@ -117,7 +118,22 @@ title: Biography
 		<li>Graduate Student Symposium <i>10/2013, 10/2012</i></li>
 		</ul>
 		</p>
-
+		
+		<hr />
+		<p>
+		<h3>Honors</h3>
+		Hellman Fellowship – <i>2020</i><br>
+		UCLA Faculty Career Development Award – <i>2020</i><br>
+		Professor of the Year (AIChE at UCLA) – <i>2019</i><br>
+		Schowalter Travel Fund – <i>2012 - 2015</i><br>
+		Hughes Scholars Program at UCSD – <i>2009 - 2010</i><br>
+		Warren College Honors Student – <i>2008 - 2010</i><br>
+		Provost Honors – <i>2007 - 2010</i><br>
+		Otto Schaler Scholarship – <i>2009</i><br>
+		Calit2 Summer Undergraduate Research Scholarship – <i>2008 - 2009</i><br>
+		</p>
+	</section>
+	
 <!--		<p>
 		<h3>Skills</h3>
 		<b>Excellent interpersonal, project management and leadership skills</b><br>
@@ -130,16 +146,12 @@ title: Biography
 		<hr />
 		<p>
 		<h3>Honors</h3>
-		Professor of the Year (AIChE at UCLA) – <i>2019</i><br>
-		Schowalter Travel Fund – <i>2012 - 2015</i><br>
 		USC Provost’s PhD Fellowship (declined) – <i>2010</i><br>
 		Hughes Scholars Program at UCSD – <i>2009 - 2010</i><br>
 		Warren College Honors Student – <i>2008 - 2010</i><br>
 		Provost Honors – <i>2007 - 2010</i><br>
 		Otto Schaler Scholarship – <i>2009</i><br>
 		Calit2 Summer Undergraduate Research Scholarship – <i>2008 - 2009</i><br>
-		Global Excellence Scholarship, University of Minnesota (declined) – <i>2007</i><br>
-		Member of the National Society of Collegiate Scholars<br>
 		</p>
 		<hr />
 		<p>
@@ -164,7 +176,7 @@ title: Biography
 		<a href="publications"><h3>Publications</h3></a>
 		</p>
 		<hr />
-	</section>
+	
  	<section>
 		<h4>Image</h4>
 		<h5>Fit</h5>
