--- a/members.html
+++ b/members.html
@@ -26,21 +26,21 @@ title: Members
 	</div>
 	<div class="col-xs-6 col-md-4">
 		<div class="card">
-			<img src="/images/ppl/kp.png" alt="Keunseok" style="width:100%">
+			<img src="/images/ppl/rl.jpg" alt="Aliya" style="width:100%">
 			<div class="container">
-			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Keunseok Park</a></h4>
+			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Richard Law</a></h4>
 			<p class="title">Graduate Student</p>
-			<p style="text-align:right;">kencab at_g.ucla.edu</p>
+			<p style="text-align:right;">richardlaw at_g.ucla.edu</p>
 			</div>
 		</div>
 	</div>
 	<div class="col-xs-6 col-md-4">
 		<div class="card">
-			<img src="/images/ppl/jx.jpg" alt="Jimmy" style="width:100%">
+			<img src="/images/ppl/kp.png" alt="Keunseok" style="width:100%">
 			<div class="container">
-			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Jimmy Xu</a></h4>
+			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Keunseok Park</a></h4>
 			<p class="title">Graduate Student</p>
-			<p style="text-align:right;">jxu11 at_g.ucla.edu</p>
+			<p style="text-align:right;">kencab at_g.ucla.edu</p>
 			</div>
 		</div>
 	</div>
@@ -176,6 +176,44 @@ title: Members
 	</div>
 </div>
 
+
+<hr />
+
+<h3>Alumni</h3>
+<div class="row make-columns">
+	<div class="col-xs-6 col-md-4">
+		<div class="card">
+			<img src="/images/ppl/jx.jpg" alt="Jimmy" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Jimmy Xu</a></h4>
+			<p class="title">Graduate Student</p>
+			<p style="text-align:right;">jxu11 at_g.ucla.edu</p>
+			</div>
+		</div>
+	</div>
+	<div class="col-xs-6 col-md-4">
+		<div class="card">
+			<img src="/images/ppl/ta.jpg" alt="Tina" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Thikrayat Al-Attar</a></h4>
+			<p class="title">Postdoctoral Scholar</p>
+			<p style="text-align:right;">tinaattar at_g.ucla.edu</p>
+			</div>
+		</div>
+	</div>
+	<div class="col-xs-6 col-md-4">
+		<div class="card">
+			<img src="/images/ppl/sd.jpg" alt="Tina" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Sean Dickson</a></h4>
+			<p class="title">Undergrad Researcher</p>
+			<p style="text-align:right;">sean0909 at_uw.edu</p>
+			</div>
+		</div>
+	</div>
+</div>
+
+
 <!--
 <div class="row">
 	<div class="column">
@@ -208,18 +246,9 @@ title: Members
 		<p class="title">Contact P.I.</p>
 		</div>
 	</div>
-</div>
-</div>
-	<div class="col-xs-6 col-md-4">
-		<div class="card">
-			<img src="/images/ppl/ta.jpg" alt="Tina" style="width:100%">
-			<div class="container">
-			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Thikrayat Al-Attar</a></h4>
-			<p class="title">Postdoctoral Scholar</p>
-			<p style="text-align:right;">tinaattar at_g.ucla.edu</p>
-			</div>
-		</div>
 	</div>
+</div>
+	
 	<div class="col-xs-6 col-md-4">
 		<div class="card">
 			<img src="/images/ppl/yg.jpg" alt="Yogesh" style="width:100%">
