add new memeber and cover art

--- a/members.html
+++ b/members.html
@@ -96,11 +96,11 @@ title: Members
 	</div>
 	<div class="col-xs-6 col-md-4">
 		<div class="card">
-			<img src="/images/ppl/kg.jpg" alt="Kanika" style="width:100%">
+			<img src="/images/ppl/eh.jpg" alt="Emma" style="width:100%">
 			<div class="container">
-			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Kanika Gulia</a></h4>
+			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Emma Hanson</a></h4>
 			<p class="title">Undergrad Student</p>
-			<p style="text-align:right;">kgulia at_ucla.edu</p>
+			<p style="text-align:right;">emmahanson at_g.ucla.edu</p>
 			</div>
 		</div>
 	</div>
@@ -203,11 +203,21 @@ title: Members
 	</div>
 	<div class="col-xs-6 col-md-4">
 		<div class="card">
-			<img src="/images/ppl/sd.jpg" alt="Tina" style="width:100%">
+			<img src="/images/ppl/sd.jpg" alt="Sean" style="width:100%">
 			<div class="container">
 			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Sean Dickson</a></h4>
 			<p class="title">Undergrad Researcher</p>
 			<p style="text-align:right;">sean0909 at_uw.edu</p>
+			</div>
+		</div>
+	</div>
+	<div class="col-xs-6 col-md-4">
+		<div class="card">
+			<img src="/images/ppl/kg.jpg" alt="Kanika" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Kanika Gulia</a></h4>
+			<p class="title">Undergrad Student</p>
+			<p style="text-align:right;">kgulia at_ucla.edu</p>
 			</div>
 		</div>
 	</div>
