--- a/publications.html
+++ b/publications.html
@@ -4,7 +4,7 @@ title: Publications
 ---
 
 <ul class="ul2">
-<li>Erşan, S., Park, J. O.  <a href="https://www.cell.com/joule/fulltext/S2542-4351(20)30388-3">Light-independent biological conversion of CO<sub>2</sub>.</a> <i>Joule</i> 4(10),2xxx-2xxx (2020) doi: 10.1016/j.joule.2020.08.007</li>
+<li>Erşan, S., Park, J. O.  <a href="https://www.cell.com/joule/fulltext/S2542-4351(20)30388-3">Light-independent biological conversion of CO<sub>2</sub>.</a> <i>Joule</i> 4(10),2047-2051 (2020) doi: 10.1016/j.joule.2020.08.007</li>
 <li>Xu, J., Martien, J., Gilbertson, C., Ma, J., Amador-Noguez, D., Park, J. O.  <a href="https://www.sciencedirect.com/science/article/abs/pii/S0958166920300355">Metabolic flux analysis and fluxomics-driven determination of Gibbs free energy using multiple isotopes.</a> <i>Current Opinion in Biotechnology</i> 64,151-160 (2020) doi: 10.1016/j.copbio.2020.02.018</li>
 <li>Park, J. O., Tanner, L. B., Wei, M. H., Khana, D. B., Jacobson, T. B., Zhang, Z., Rubin, S. A., Li, S. H. J., Higgins, M. B., Stevenson, D. M., Amador-Noguez, D., Rabinowitz, J. D.  <a href="https://doi.org/10.1038/s41589-019-0364-9">Near-equilibrium glycolysis supports metabolic homeostasis and energy yield.</a> <i>Nature Chemical Biology</i> 15(10),1001-1008 (2019) doi: 10.1038/s41589-019-0364-9</li>
 <li>Song, Y., Park, J. O., Tanner, L., Nagano, Y., Rabinowitz, J. D., Shvartsman, S. Y.  <a href="https://www.sciencedirect.com/science/article/pii/S0960982219305603">Energy budget of <i>Drosophila</i> embryogenesis.</a> <i>Current Biology</i> 29(12),R566-R567 (2019) doi: 10.1016/j.cub.2019.05.025</li>
@@ -32,6 +32,7 @@ title: Publications
 	<h3>Cover Art</h3>
 	<div class="box alt">
 		<div class="row uniform 50%">
+			<div class="4u"><span class="image fit"><a href="https://www.cell.com/joule/issue?pii=S2542-4351(19)X0011-2"><img src="images/art/joule_oct20.jpg" alt="" /></a></span></div>
 			<div class="4u"><span class="image fit"><a href="https://www.nature.com/nchembio/volumes/15/issues/10"><img src="images/art/ncb_oct19.png" alt="" /></a></span></div>
 			<div class="4u"><span class="image fit"><a href="https://www.sciencedirect.com/journal/developmental-cell/vol/42/issue/3"><img src="images/art/devcell_aug17.jpg" alt="" /></a></span></div>
 		</div>
