--- a/biography.html
+++ b/biography.html
@@ -23,6 +23,7 @@ title: Biography
 		<li>Co-Director, Metabolomics Center</li>
 		<li>Member, Molecular Biology Institute</li>
 		<li>Associated Faculty, Institute for Quantitative and Computational Biosciences</li>
+		<li>Affiliate, NSF BioPACIFIC MIP</li>
 		<br>
 		<a href="http://web.mit.edu">Massachusetts Institute of Technology</a>, Cambridge, MA – <i>2016 - 2018</i><br>
 		<li>Postdoc, Department of Chemical Engineering</li>
