--- a/resources.html
+++ b/resources.html
@@ -4,7 +4,7 @@ title: Resources
 ---
 
 
-<p><a href="https://biopacificmip.org"><span class="image left"><img src="images/logos/BioPACIFIC.png" alt="" /></span><br><br><font size="+3">BioPACIFIC</font></a></p>
+<p><a href="https://biopacificmip.org"><span class="image left"><img src="images/logos/BioPACIFIC.png" alt="" /></span><br><br><font size="+3">NSF BioPACIFIC MIP</font></a></p>
 <br><br><br><br>
 
 <p><a href="https://systems.crump.ucla.edu/metabolomics_center"><span class="image left"><img src="images/logos/MetabolomicsCenter.png" alt="" /></span><br><font size="+3">Metabolomics</font></a></p>
