--- a/members.html
+++ b/members.html
@@ -26,7 +26,7 @@ title: Members
 	</div>
 	<div class="col-xs-6 col-md-4">
 		<div class="card">
-			<img src="/images/ppl/rl.jpg" alt="Aliya" style="width:100%">
+			<img src="/images/ppl/rl.jpg" alt="Richard" style="width:100%">
 			<div class="container">
 			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Richard Law</a></h4>
 			<p class="title">Graduate Student</p>
@@ -51,6 +51,93 @@ title: Members
 			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Sevcan Erşan</a></h4>
 			<p class="title">Postdoctoral Researcher</p>
 			<p style="text-align:right;">sevcanersan at_gmail.com</p>
+			</div>
+		</div>
+	</div>
+	<div class="col-xs-6 col-md-4">
+		<div class="card">
+			<img src="/images/ppl/ld.jpg" alt="Lorin" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Lorin Danielsen</a></h4>
+			<p class="title">Undergrad Student</p>
+			<p style="text-align:right;">danielsenlorin at_gmail.com</p>
+			</div>
+		</div>
+	</div>
+	<div class="col-xs-6 col-md-4">
+		<div class="card">
+			<img src="/images/ppl/sd.jpg" alt="Sean" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Sean Dickson</a></h4>
+			<p class="title">Undergrad Researcher</p>
+			<p style="text-align:right;">sean0909 at_uw.edu</p>
+			</div>
+		</div>
+	</div>
+	<div class="col-xs-6 col-md-4">
+		<div class="card">
+			<img src="/images/ppl/eh.jpg" alt="Emma" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Emma Hanson</a></h4>
+			<p class="title">Undergrad Student</p>
+			<p style="text-align:right;">emmahanson at_g.ucla.edu</p>
+			</div>
+		</div>
+	</div>
+	<div class="col-xs-6 col-md-4">
+		<div class="card">
+			<img src="/images/ppl/sl.jpg" alt="SungGyung" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Sung Gyung Lee</a></h4>
+			<p class="title">Undergrad Student</p>
+			<p style="text-align:right;">sunggyung.lee123 at_gmail.com</p>
+			</div>
+		</div>
+	</div>
+	<div class="col-xs-6 col-md-4">
+		<div class="card">
+			<img src="/images/ppl/em.jpg" alt="Edward" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Edward Ma</a></h4>
+			<p class="title">Undergrad Student</p>
+			<p style="text-align:right;">edwardmalux at_gmail.com</p>
+			</div>
+		</div>
+	</div>
+	<div class="col-xs-6 col-md-4">
+		<div class="card">
+			<img src="/images/ppl/jp.jpg" alt="Jacob" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Jacob Prohroff</a></h4>
+			<p class="title">Undergrad Student</p>
+			<p style="text-align:right;">jacobprohroff at_gmail.com</p>
+			</div>
+		</div>
+	</div>
+</div>
+
+
+<hr />
+
+<h3>Alumni</h3>
+<div class="row make-columns">
+	<div class="col-xs-6 col-md-4">
+		<div class="card">
+			<img src="/images/ppl/jx.jpg" alt="Jimmy" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Jimmy Xu</a></h4>
+			<p class="title">Graduate Student</p>
+			<p style="text-align:right;">jxu11 at_g.ucla.edu</p>
+			</div>
+		</div>
+	</div>
+	<div class="col-xs-6 col-md-4">
+		<div class="card">
+			<img src="/images/ppl/ta.jpg" alt="Tina" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Thikrayat Al-Attar</a></h4>
+			<p class="title">Postdoctoral Scholar</p>
+			<p style="text-align:right;">tinaattar at_g.ucla.edu</p>
 			</div>
 		</div>
 	</div>
@@ -96,31 +183,11 @@ title: Members
 	</div>
 	<div class="col-xs-6 col-md-4">
 		<div class="card">
-			<img src="/images/ppl/eh.jpg" alt="Emma" style="width:100%">
+			<img src="/images/ppl/kg.jpg" alt="Kanika" style="width:100%">
 			<div class="container">
-			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Emma Hanson</a></h4>
+			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Kanika Gulia</a></h4>
 			<p class="title">Undergrad Student</p>
-			<p style="text-align:right;">emmahanson at_g.ucla.edu</p>
-			</div>
-		</div>
-	</div>
-	<div class="col-xs-6 col-md-4">
-		<div class="card">
-			<img src="/images/ppl/sl.jpg" alt="SungGyung" style="width:100%">
-			<div class="container">
-			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Sung Gyung Lee</a></h4>
-			<p class="title">Undergrad Student</p>
-			<p style="text-align:right;">sunggyung.lee123 at_gmail.com</p>
-			</div>
-		</div>
-	</div>
-	<div class="col-xs-6 col-md-4">
-		<div class="card">
-			<img src="/images/ppl/em.jpg" alt="Edward" style="width:100%">
-			<div class="container">
-			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Edward Ma</a></h4>
-			<p class="title">Undergrad Student</p>
-			<p style="text-align:right;">edwardmalux at_gmail.com</p>
+			<p style="text-align:right;">kgulia at_ucla.edu</p>
 			</div>
 		</div>
 	</div>
@@ -146,16 +213,6 @@ title: Members
 	</div>
 	<div class="col-xs-6 col-md-4">
 		<div class="card">
-			<img src="/images/ppl/jp.jpg" alt="Jacob" style="width:100%">
-			<div class="container">
-			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Jacob Prohroff</a></h4>
-			<p class="title">Undergrad Student</p>
-			<p style="text-align:right;">jacobprohroff at_gmail.com</p>
-			</div>
-		</div>
-	</div>
-	<div class="col-xs-6 col-md-4">
-		<div class="card">
 			<img src="/images/ppl/jr.jpg" alt="Justine" style="width:100%">
 			<div class="container">
 			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Justine Reblando</a></h4>
@@ -171,53 +228,6 @@ title: Members
 			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Hans Wahono</a></h4>
 			<p class="title">Undergrad Student</p>
 			<p style="text-align:right;">hanssw at_g.ucla.edu</p>
-			</div>
-		</div>
-	</div>
-</div>
-
-
-<hr />
-
-<h3>Alumni</h3>
-<div class="row make-columns">
-	<div class="col-xs-6 col-md-4">
-		<div class="card">
-			<img src="/images/ppl/jx.jpg" alt="Jimmy" style="width:100%">
-			<div class="container">
-			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Jimmy Xu</a></h4>
-			<p class="title">Graduate Student</p>
-			<p style="text-align:right;">jxu11 at_g.ucla.edu</p>
-			</div>
-		</div>
-	</div>
-	<div class="col-xs-6 col-md-4">
-		<div class="card">
-			<img src="/images/ppl/ta.jpg" alt="Tina" style="width:100%">
-			<div class="container">
-			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Thikrayat Al-Attar</a></h4>
-			<p class="title">Postdoctoral Scholar</p>
-			<p style="text-align:right;">tinaattar at_g.ucla.edu</p>
-			</div>
-		</div>
-	</div>
-	<div class="col-xs-6 col-md-4">
-		<div class="card">
-			<img src="/images/ppl/sd.jpg" alt="Sean" style="width:100%">
-			<div class="container">
-			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Sean Dickson</a></h4>
-			<p class="title">Undergrad Researcher</p>
-			<p style="text-align:right;">sean0909 at_uw.edu</p>
-			</div>
-		</div>
-	</div>
-	<div class="col-xs-6 col-md-4">
-		<div class="card">
-			<img src="/images/ppl/kg.jpg" alt="Kanika" style="width:100%">
-			<div class="container">
-			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Kanika Gulia</a></h4>
-			<p class="title">Undergrad Student</p>
-			<p style="text-align:right;">kgulia at_ucla.edu</p>
 			</div>
 		</div>
 	</div>
