--- a/members.html
+++ b/members.html
@@ -66,16 +66,6 @@ title: Members
 	</div>
 	<div class="col-xs-6 col-md-4">
 		<div class="card">
-			<img src="/images/ppl/sd.jpg" alt="Sean" style="width:100%">
-			<div class="container">
-			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Sean Dickson</a></h4>
-			<p class="title">Undergrad Researcher</p>
-			<p style="text-align:right;">sean0909 at_uw.edu</p>
-			</div>
-		</div>
-	</div>
-	<div class="col-xs-6 col-md-4">
-		<div class="card">
 			<img src="/images/ppl/eh.jpg" alt="Emma" style="width:100%">
 			<div class="container">
 			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Emma Hanson</a></h4>
@@ -96,21 +86,31 @@ title: Members
 	</div>
 	<div class="col-xs-6 col-md-4">
 		<div class="card">
-			<img src="/images/ppl/em.jpg" alt="Edward" style="width:100%">
+			<img src="/images/ppl/so.png" alt="Samantha" style="width:100%">
 			<div class="container">
-			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Edward Ma</a></h4>
+			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Samantha O'Keeffe</a></h4>
 			<p class="title">Undergrad Student</p>
-			<p style="text-align:right;">edwardmalux at_gmail.com</p>
+			<p style="text-align:right;">samokeeffe at_g.ucla.edu</p>
 			</div>
 		</div>
 	</div>
 	<div class="col-xs-6 col-md-4">
 		<div class="card">
-			<img src="/images/ppl/jp.jpg" alt="Jacob" style="width:100%">
+			<img src="/images/ppl/ap.jpg" alt="Adriana" style="width:100%">
 			<div class="container">
-			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Jacob Prohroff</a></h4>
+			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Adriana Payan</a></h4>
 			<p class="title">Undergrad Student</p>
-			<p style="text-align:right;">jacobprohroff at_gmail.com</p>
+			<p style="text-align:right;">aadrianapayann at_gmail.com</p>
+			</div>
+		</div>
+	</div>
+	<div class="col-xs-6 col-md-4">
+		<div class="card">
+			<img src="/images/ppl/cw.jpg" alt="Caleb" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Caleb Watson</a></h4>
+			<p class="title">Undergrad Student</p>
+			<p style="text-align:right;">caleb.watson at_duke.edu</p>
 			</div>
 		</div>
 	</div>
@@ -148,6 +148,16 @@ title: Members
 			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Bill Chuang</a></h4>
 			<p class="title">Undergrad Student</p>
 			<p style="text-align:right;">bill.chuang0624 at_ucla.edu</p>
+			</div>
+		</div>
+	</div>
+	<div class="col-xs-6 col-md-4">
+		<div class="card">
+			<img src="/images/ppl/sd.jpg" alt="Sean" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Sean Dickson</a></h4>
+			<p class="title">Undergrad Researcher</p>
+			<p style="text-align:right;">sean0909 at_uw.edu</p>
 			</div>
 		</div>
 	</div>
@@ -193,6 +203,16 @@ title: Members
 	</div>
 	<div class="col-xs-6 col-md-4">
 		<div class="card">
+			<img src="/images/ppl/em.jpg" alt="Edward" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Edward Ma</a></h4>
+			<p class="title">Undergrad Student</p>
+			<p style="text-align:right;">edwardmalux at_gmail.com</p>
+			</div>
+		</div>
+	</div>
+	<div class="col-xs-6 col-md-4">
+		<div class="card">
 			<img src="/images/ppl/km.jpg" alt="Kayli" style="width:100%">
 			<div class="container">
 			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Kayli Masuda</a></h4>
@@ -208,6 +228,16 @@ title: Members
 			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Megan McShane</a></h4>
 			<p class="title">Undergrad Student</p>
 			<p style="text-align:right;">mbmcshane at_ucla.edu</p>
+			</div>
+		</div>
+	</div>
+	<div class="col-xs-6 col-md-4">
+		<div class="card">
+			<img src="/images/ppl/jp.jpg" alt="Jacob" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Jacob Prohroff</a></h4>
+			<p class="title">Undergrad Student</p>
+			<p style="text-align:right;">jacobprohroff at_gmail.com</p>
 			</div>
 		</div>
 	</div>
